added try-catch on account controller. created method errConstructor in package sendStatus. fixed typo in word response
